[package]
name = "utils"
version = "0.0.3"
authors = ["Jozef Podlecki"]
description = ""
edition = "2024"
rust-version = "1.88.0"

[dependencies]
simple_logger = "5.0.0"
image = { version = "0.25.6" }
walkdir = { version = "2" }
clap = { version = "4.5", features = ["derive"] }
log = "0.4.18"
anyhow = "1.0.96"
regex = "1.11.1"
lightningcss = "1.0.0-alpha.67"